2014-03-24	Dominik Reichardt <dominus@users.sourceforge.net>
	* gumps/AudioOptions_gump.cc: chnaging audio settings during playback of 
	  non-looping music tracks flagged these as looping - fixed by i30817

2014-03-23	Malignant Manor <malignantmanor@users.sourceforge.net>
	* Fix timing issue that could cause the Guardian's intro speech not to play.

2014-03-11	Malignant Manor <malignantmanor@users.sourceforge.net>
	* actorio.cc: Fix might timer not being started when reloading a saved game.

2014-03-02	Malignant Manor <malignantmanor@users.sourceforge.net>
	* Audio/Midi.cc, gamewin.*, gumps/AudioOptions_gump.cc: Stop music when
	  music conversion changes. Don't stop music when the midi driver changes
	  and oggs are playing. Don't try to play bg tracks if the settings aren't
	  capable of playing them properly.

2014-02-05	Dominik Reichardt <dominus@users.sourceforge.net>
	* usecode/ucinternal.cc: fixed regression from rev.7458 which crashed at the 
	  SI lightning storms - thanks wjp for finding the fix
	
2014-01-28	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* combat.cc: If there are no awake enemies nearby, AI will now gladly mop up
	  any sleeping foes around.
	* objs/egg.cc: Fixed bug #1874 "Fireball/Explosion trap triggers to late,
	  fires too long" by using weapon range as trap range and extending how far
	  offscreen traps can be and still fire.
	* objs/contain.cc,usecode/ucinternal.cc: Fixed bug #1863 "Delete intrinsic
	  needs to be able to find stuff in locked containers" by allowing locked
	  containers to have their contents searched and counted. This allows Elynor
	  to find and delete the contents of the sealed box. Also, reverted the hack
	  from revision 7438.

2014-01-28	Malignant Manor <malignantmanor@users.sourceforge.net>
	* audio/AudioMixer.cc: Fix uninitialized audio buffer in SDL 2.

2014-01-28	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* objs/chunks.cc: Added ugly hack to fix relative ordering of Y shapes and